InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContactRegulatoryAction__c/vlocity_ins__ContactRegulatoryAction__c.object-meta.xml
<CustomObject>
    <description>Represents the current and past regulatory actions taken against an insurance agent/producer. Master-detail child object of the Contact.</description>
    <label>Contact Regulatory Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Regulatory Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>