InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContactRegulatoryAction__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Regulatory Actions</relationshipLabel>
    <relationshipName>ContactRegulatoryActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>