InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContactRegulatoryAction__c/fields/vlocity_ins__JurisdictionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__JurisdictionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jurisdiction</label>
    <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
    <relationshipName>RegulatoryActions</relationshipName>
    <type>Lookup</type>
</CustomField>