InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContactRegulatoryAction__c/fields/vlocity_ins__ReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReasonDescription__c</fullName>
    <label>Reason Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>